samples/_failures_safe/1761728461_07d707_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97be52f9.c: In function ‘main’:
./samples/SAFE/__tmp_97be52f9.c:150:5: error: expected declaration or statement at end of input
  150 |     kruskal_mst(&graph);
      |     ^~~~~~~~~~~
